# gl-practice

./: .gitmodules  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/src/: main.cpp
cmake/: target.cmake
common/: CMakeLists.txt
common/include/: binary_loader.h
common/src/: binary_loader.cpp
core/: CMakeLists.txt
core/include/core/: assets.h  camera.h  file_watcher.h  fwd.h  gfx.h  guid.h  handle.h  iosystem.h  loader.h  mesh.h  model.h  scene.h  shader.h  shader_loader.h  texture_loader.h  vertex.h
core/src/: file_watcher.cpp  gfx.cpp  iosystem.cpp  mesh.cpp  model.cpp  shader.cpp  shader_loader.cpp
examples/: CMakeLists.txt
examples/cube/: CMakeLists.txt
examples/cube/src/: cube.cpp
examples/fft-water-simulation/: CMakeLists.txt
examples/fft-water-simulation/res/shaders/: surface.frag  surface.vert
examples/fft-water-simulation/src/: fft-water-sim.cpp
examples/heightmap/: CMakeLists.txt
examples/heightmap/res/shaders/: terrain.frag  terrain.vert
examples/heightmap/src/: main.cpp  terrain_demo_scene.cpp  terrain_demo_scene.hpp  terrain_generator.cpp  terrain_generator.hpp
examples/hello-triangle/: CMakeLists.txt
examples/hello-triangle/src/: hello-triangle.cpp
examples/model-loading/: CMakeLists.txt
examples/model-loading/src/: model-loading.cpp
examples/primitives/: CMakeLists.txt
examples/primitives/src/: primitives.cpp
examples/scene/: CMakeLists.txt
examples/scene/src/: main.cpp  sphere_scene.cpp  sphere_scene.h
res/shaders/: color_surface.frag  color_surface.vert  simple_surface.frag  simple_surface.vert  surface.frag  surface.vert
tests/: CMakeLists.txt
